# stock-trading-bot

./: __init__.py  data_source.py  main.py  moving_filters.py  notify.py  pushover.py  server.py  test_api_client.py  trading_bot.py  trading_bot_ut.py  utils.py  xAPIConnector.py  xtb-test.py  xtb.py
algorithms/: __init__.py  common.py  find_optimal_trading_improve_greedy.py  find_optimal_trading_weighted_interval_scheduling.py  find_trading_points.py  trading_simulator.py
algorithms/wis/: CMakeLists.txt  int_profile.cpp  wis_module.cpp  wis_profile.cpp
apps/: generate_trading_points.py  merge_data.py  misc_utils.py
candles/: __init__.py  normalize.py
detectors/: __init__.py  plunge_detectors.py
indicators/: __init__.py  indicator.py  indicatorsContainer.py  periodic_roc.py
test/: test_api_client.py  test_datasource.py  test_trading_points.py  trading_bot_ut.py
